# tel-bot-youtube-downloader

./: .gitlab-ci.yml  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yaml
deploy/docker-swarm/: prd.yaml
src/: main.rs
